--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   letsencrypt-nginx-proxy-companion:
     restart: always
-    image: jrcs/letsencrypt-nginx-proxy-companion
+    image: jrcs/letsencrypt-nginx-proxy-companion:stable
     container_name: letsencrypt-nginx-proxy-companion
     volumes_from:
       - nginx
