--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,3 +65,14 @@ services:
       - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=sample.fongshway.com
       - LETSENCRYPT_EMAIL=email@example.com
+
+  jenkins:
+    image: jenkins/jenkins:lts
+    volumes:
+      - './jenkins_home:/var/jenkins_home'
+    environment:
+      - VIRTUAL_HOST=jenkins.fongshway.com
+      - VIRTUAL_NETWORK=nginx-proxy
+      - VIRTUAL_PORT=8080
+      - LETSENCRYPT_HOST=jenkins.fongshway.com
+      - LETSENCRYPT_EMAIL=email@example.com
