--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,10 +71,13 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     volumes:
-      - "./jenkins_home:/var/jenkins_home"
+      - "jenkins_home:/var/jenkins_home"
     environment:
       - VIRTUAL_HOST=jenkins.fongshway.com
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=8080
       - LETSENCRYPT_HOST=jenkins.fongshway.com
       - LETSENCRYPT_EMAIL=email@example.com
+
+volumes:
+  jenkins_home:
