--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 
 services:
   nginx:
@@ -9,33 +9,41 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - "/etc/nginx/conf.d"
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
-      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
+      - nginx_conf:/etc/nginx/conf.d
+      - nginx_html:/usr/share/nginx/html
+      - nginx_vhost:/etc/nginx/vhost.d
+      - proxy_certs:/etc/nginx/certs:ro
     command: [nginx-debug, '-g', 'daemon off;']
 
   nginx-gen:
+    depends_on:
+      - nginx
     restart: always
     image: jwilder/docker-gen
     container_name: nginx-gen
     volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-    volumes_from:
-      - nginx
+      - ./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - nginx_conf:/etc/nginx/conf.d
+      - nginx_html:/usr/share/nginx/html
+      - nginx_vhost:/etc/nginx/vhost.d
+      - proxy_certs:/etc/nginx/certs:ro
     entrypoint: /bin/sh -c
     command: ["/usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf"]
 
   letsencrypt-nginx-proxy-companion:
+    depends_on:
+      - nginx
+      - nginx-gen
     restart: always
     image: jrcs/letsencrypt-nginx-proxy-companion:stable
     container_name: letsencrypt-nginx-proxy-companion
-    volumes_from:
-      - nginx
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - nginx_conf:/etc/nginx/conf.d
+      - nginx_html:/usr/share/nginx/html
+      - nginx_vhost:/etc/nginx/vhost.d
+      - proxy_certs:/etc/nginx/certs:rw
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
@@ -57,11 +65,20 @@ services:
     build: ./samples/website
     container_name: sample-website
     volumes:
-      - "./volumes/nginx-sample-website/conf.d/:/etc/nginx/conf.d"
-      - "./volumes/config/sample-website/config.js:/usr/share/nginx/html/config.js"
+      - ./volumes/nginx-sample-website/conf.d/:/etc/nginx/conf.d
+      - ./volumes/config/sample-website/config.js:/usr/share/nginx/html/config.js
     environment:
       - VIRTUAL_HOST=sample.fongshway.com
       - VIRTUAL_NETWORK=nginx-proxy
       - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=sample.fongshway.com
       - LETSENCRYPT_EMAIL=email@example.com
+
+volumes:
+  nginx_conf:
+  nginx_vhost:
+  nginx_html:
+  proxy_certs:
+    driver: local
+    driver_opts:
+      device: ./volumes/proxy/certs
