--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - nginx_conf:/etc/nginx/conf.d
       - nginx_html:/usr/share/nginx/html
       - nginx_vhost:/etc/nginx/vhost.d
-      - proxy_certs:/etc/nginx/certs:ro
+      - ./volumes/proxy/certs:/etc/nginx/certs:ro
     command: [nginx-debug, '-g', 'daemon off;']
 
   nginx-gen:
@@ -27,7 +27,7 @@ services:
       - nginx_conf:/etc/nginx/conf.d
       - nginx_html:/usr/share/nginx/html
       - nginx_vhost:/etc/nginx/vhost.d
-      - proxy_certs:/etc/nginx/certs:ro
+      - ./volumes/proxy/certs:/etc/nginx/certs:ro
     entrypoint: /bin/sh -c
     command: ["/usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf"]
 
@@ -43,7 +43,7 @@ services:
       - nginx_conf:/etc/nginx/conf.d
       - nginx_html:/usr/share/nginx/html
       - nginx_vhost:/etc/nginx/vhost.d
-      - proxy_certs:/etc/nginx/certs:rw
+      - ./volumes/proxy/certs:/etc/nginx/certs:rw
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
@@ -78,7 +78,3 @@ volumes:
   nginx_conf:
   nginx_vhost:
   nginx_html:
-  proxy_certs:
-    driver: local
-    driver_opts:
-      device: ./volumes/proxy/certs
