--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,21 @@ services:
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
+  jenkins:
+    restart: always
+    image: fongshway/jenkins
+    build: ./jenkins
+    container_name: jenkins
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - ./volumes/secrets:/run/secrets
+    environment:
+      - VIRTUAL_HOST=jenkins.fongshway.com
+      - VIRTUAL_NETWORK=nginx-proxy
+      - VIRTUAL_PORT=8080
+      - LETSENCRYPT_HOST=jenkins.fongshway.com
+      - LETSENCRYPT_EMAIL=email@example.com
+
   sample-api:
     restart: always
     image: fongshway/sample-api
@@ -75,6 +90,7 @@ services:
       - LETSENCRYPT_EMAIL=email@example.com
 
 volumes:
+  jenkins_home:
   nginx_conf:
-  nginx_vhost:
   nginx_html:
+  nginx_vhost:
