--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,20 +47,20 @@ services:
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
-  jenkins:
-    restart: always
-    image: fongshway/jenkins
-    build: ./jenkins
-    container_name: jenkins
-    volumes:
-      - jenkins_home:/var/jenkins_home
-      - ./volumes/secrets:/run/secrets
-    environment:
-      - VIRTUAL_HOST=jenkins.fongshway.com
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=8080
-      - LETSENCRYPT_HOST=jenkins.fongshway.com
-      - LETSENCRYPT_EMAIL=email@example.com
+  #jenkins:
+  #  restart: always
+  #  image: fongshway/jenkins
+  #  build: ./jenkins
+  #  container_name: jenkins
+  #  volumes:
+  #    - jenkins_home:/var/jenkins_home
+  #    - ./volumes/secrets:/run/secrets
+  #  environment:
+  #    - VIRTUAL_HOST=jenkins.fongshway.com
+  #    - VIRTUAL_NETWORK=nginx-proxy
+  #    - VIRTUAL_PORT=8080
+  #    - LETSENCRYPT_HOST=jenkins.fongshway.com
+  #    - LETSENCRYPT_EMAIL=email@example.com
 
   portainer:
     restart: always
